unpackaged/main/default/objects/Opportunity/fields/Academic_Aid_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Aid_Year__c</fullName>
    <description>[GM 1/3/2024] Peoplesoft sends the last 4 digits of the full academic aid year into Salesforce.</description>
    <inlineHelpText>This field shows the last year for the academic aid year, for example, if the full aid year is &#39;2023-2024&#39;, this field will only show &#39;2024&#39;.</inlineHelpText>
    <label>Academic Aid Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>