unpackaged/main/default/objects/Opportunity/fields/Academic_Career__c.field-meta.xml
<CustomField>
    <fullName>Academic_Career__c</fullName>
    <label>Academic Career</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UGRD</fullName>
            </value>
            <value>
                <fullName>CPP</fullName>
            </value>
            <value>
                <fullName>PSAV</fullName>
            </value>
            <value>
                <fullName>CEPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>