unpackaged/main/default/objects/Opportunity/fields/Academic_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Description__c</fullName>
    <label>Academic Plan Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>