unpackaged/main/default/objects/Opportunity/fields/Academic_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program_Name__c</fullName>
    <description>Academic Program Name - For Pardot Dynamic Lists</description>
    <formula>traa_Academic_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Name of the Academic Program Record related to this Opportunity Record</inlineHelpText>
    <label>Academic Program Name</label>
    <type>Text</type>
</CustomField>