unpackaged/main/default/objects/Opportunity/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <formula>traa_Applicant__r.hed__AlternateEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Email</label>
    <type>Text</type>
</CustomField>