unpackaged/main/default/objects/Opportunity/fields/Applicant_Current_Institution_Text__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Current_Institution_Text__c</fullName>
    <label>Name of High School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>