unpackaged/main/default/objects/Opportunity/fields/Campus_Assigned_to_High_School__c.field-meta.xml
<CustomField>
    <fullName>Campus_Assigned_to_High_School__c</fullName>
    <label>Campus Assigned to High School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Padron</fullName>
                <label>Padron Campus</label>
            </value>
            <value>
                <fullName>Hialeah</fullName>
                <label>Hialeah Campus</label>
            </value>
            <value>
                <fullName>Homestead</fullName>
                <label>Homestead Campus</label>
            </value>
            <value>
                <fullName>Kendall</fullName>
                <label>Kendall Campus</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <label>Medical Campus</label>
            </value>
            <value>
                <fullName>Meek</fullName>
            </value>
            <value>
                <fullName>North</fullName>
                <label>North Campus</label>
            </value>
            <value>
                <fullName>West</fullName>
                <label>West Campus</label>
            </value>
            <value>
                <fullName>Wolfson</fullName>
                <label>Wolfson Campus</label>
            </value>
            <value>
                <fullName>Not available</fullName>
                <default>true</default>
                <label>Not available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>