unpackaged/main/default/objects/Opportunity/fields/College_Ready_Math__c.field-meta.xml
<CustomField>
    <fullName>College_Ready_Math__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College Ready Math</label>
    <type>Checkbox</type>
</CustomField>