unpackaged/main/default/objects/Opportunity/fields/College_Ready_Reading__c.field-meta.xml
<CustomField>
    <fullName>College_Ready_Reading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College Ready Reading</label>
    <type>Checkbox</type>
</CustomField>