unpackaged/main/default/objects/Opportunity/fields/College_Ready_Scores_In_All_Areas__c.field-meta.xml
<CustomField>
    <fullName>College_Ready_Scores_In_All_Areas__c</fullName>
    <formula>(College_Ready_Math__c = True) &amp;&amp; (College_Ready_Reading__c = TRUE) &amp;&amp;  (College_Ready_Writing__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College Ready Scores In All Areas</label>
    <type>Checkbox</type>
</CustomField>