unpackaged/main/default/objects/Opportunity/fields/College_Ready_Writing__c.field-meta.xml
<CustomField>
    <fullName>College_Ready_Writing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College Ready Writing</label>
    <type>Checkbox</type>
</CustomField>