unpackaged/main/default/objects/Opportunity/fields/Completed_FOA__c.field-meta.xml
<CustomField>
    <fullName>Completed_FOA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by PeopleSoft Integration</description>
    <label>Completed FOA</label>
    <type>Checkbox</type>
</CustomField>