unpackaged/main/default/objects/Opportunity/fields/Completed_Shark_Intake__c.field-meta.xml
<CustomField>
    <fullName>Completed_Shark_Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Shark Intake</label>
    <type>Checkbox</type>
</CustomField>