unpackaged/main/default/objects/Opportunity/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>Used for Opportunity History report.</description>
    <formula>CreatedBy.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Opportunity History report.</inlineHelpText>
    <label>Created By</label>
    <type>Text</type>
</CustomField>