unpackaged/main/default/objects/Opportunity/fields/Created_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Created_Yesterday__c</fullName>
    <formula>DATEVALUE(CreatedDate)  = (TODAY()-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Yesterday?</label>
    <type>Checkbox</type>
</CustomField>