unpackaged/main/default/objects/Opportunity/fields/Current_Institution_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Institution_Code__c</fullName>
    <description>Holds the code for the Account referenced in the Applicant_Current_Institution__c. To be used to find the right Account record in automation.</description>
    <label>Current Institution Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>