unpackaged/main/default/objects/Opportunity/fields/DevEd_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>DevEd_Exemption_Status__c</fullName>
    <inlineHelpText>Is Student Exempt?</inlineHelpText>
    <label>DevEd Exemption Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>