unpackaged/main/default/objects/Opportunity/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coming future term</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Attending another school</fullName>
            </value>
            <value>
                <fullName>Does not want to be contacted</fullName>
            </value>
            <value>
                <fullName>Inactive Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inactive Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>