unpackaged/main/default/objects/Opportunity/fields/Domestic_Non_Transfer_Onboarding_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Non_Transfer_Onboarding_Tasks__c</fullName>
    <description>Calculates Onboarding Tasks score for domestic non-Transfer students</description>
    <formula>IF( Official_HS_Transcript_Received__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domestic Non-Transfer Onboarding Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>