unpackaged/main/default/objects/Opportunity/fields/Domestic_Onboarding_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Onboarding_Tasks__c</fullName>
    <description>Calculates Onboarding task score for all domestic students</description>
    <formula>IF( hed__Completed_FAFSA__c = True, 1, 0) +
IF( Eligible_for_In_State_Fees__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domestic Onboarding Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>