unpackaged/main/default/objects/Opportunity/fields/Eligible_for_In_State_Fees__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_In_State_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from PeopleSoft Integration</description>
    <label>Eligible for In State Fees</label>
    <type>Checkbox</type>
</CustomField>