unpackaged/main/default/objects/Opportunity/fields/Expected_Family_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Family_Contribution__c</fullName>
    <label>Expected Family Contribution</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>