unpackaged/main/default/objects/Opportunity/fields/Extract_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Extract_Opportunity__c</fullName>
    <description>Field for MDC Data Upload Mapping.</description>
    <externalId>true</externalId>
    <label>Extract_Opportunity</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>