unpackaged/main/default/objects/Opportunity/fields/Has_Pell__c.field-meta.xml
<CustomField>
    <fullName>Has_Pell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pell</label>
    <type>Checkbox</type>
</CustomField>