unpackaged/main/default/objects/Opportunity/fields/Has_Usable_Placement_Scores_in_All_Areas__c.field-meta.xml
<CustomField>
    <fullName>Has_Usable_Placement_Scores_in_All_Areas__c</fullName>
    <formula>(Has_Usable_Placement_Scores_in_Math__c = TRUE) &amp;&amp;  (Has_Usable_Placement_Scores_in_Reading__c = TRUE) &amp;&amp;  (Has_Usable_Placement_Scores_in_Writing__c = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Usable Placement Scores in All Areas</label>
    <type>Checkbox</type>
</CustomField>