unpackaged/main/default/objects/Opportunity/fields/Has_Usable_Placement_Scores_in_Writing__c.field-meta.xml
<CustomField>
    <fullName>Has_Usable_Placement_Scores_in_Writing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Usable Placement Scores in Writing</label>
    <type>Checkbox</type>
</CustomField>