unpackaged/main/default/objects/Opportunity/fields/hed__Completed_FAFSA__c.field-meta.xml
<CustomField>
    <fullName>hed__Completed_FAFSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a FAFSA application related to this Opportunity was completed.</description>
    <inlineHelpText>Indicates whether a FAFSA application related to this Opportunity was completed.</inlineHelpText>
    <label>Completed FAFSA</label>
    <type>Checkbox</type>
</CustomField>