unpackaged/main/default/objects/Opportunity/fields/hed__Desired_Campus__c.field-meta.xml
<CustomField>
    <fullName>hed__Desired_Campus__c</fullName>
    <description>The name of the desired campus related to this Opportunity.</description>
    <inlineHelpText>The name of the desired campus related to this Opportunity.</inlineHelpText>
    <label>Desired Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>