unpackaged/main/default/objects/Opportunity/fields/hed__Desired_Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>hed__Desired_Degree_Level__c</fullName>
    <description>The level of the desired degree related to this Opportunity.</description>
    <inlineHelpText>The level of the desired degree related to this Opportunity.</inlineHelpText>
    <label>Desired Degree Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-degree</fullName>
                <label>Non-Degree</label>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>