unpackaged/main/default/objects/Opportunity/fields/Home_Campus__c.field-meta.xml
<CustomField>
    <fullName>Home_Campus__c</fullName>
    <label>Home Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
                <label>Hialeah Campus</label>
            </value>
            <value>
                <fullName>Homestead</fullName>
                <label>Homestead Campus</label>
            </value>
            <value>
                <fullName>Padron</fullName>
                <label>Padron Campus</label>
            </value>
            <value>
                <fullName>Kendall</fullName>
                <label>Kendall Campus</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <label>Medical Campus</label>
            </value>
            <value>
                <fullName>North</fullName>
                <label>North Campus</label>
            </value>
            <value>
                <fullName>West</fullName>
                <label>West Campus</label>
            </value>
            <value>
                <fullName>Wolfson</fullName>
                <label>Wolfson Campus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>