unpackaged/main/default/objects/Opportunity/fields/International_Student__c.field-meta.xml
<CustomField>
    <fullName>International_Student__c</fullName>
    <formula>traa_Applicant__r.traa_International_Student__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>International Student</label>
    <type>Checkbox</type>
</CustomField>