unpackaged/main/default/objects/Opportunity/fields/Invoice_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Due__c</fullName>
    <label>Invoice Amount Due</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>