unpackaged/main/default/objects/Opportunity/fields/MDID__c.field-meta.xml
<CustomField>
    <fullName>MDID__c</fullName>
    <formula>traa_Applicant__r.Student_Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDID</label>
    <type>Text</type>
</CustomField>