unpackaged/main/default/objects/Opportunity/fields/My_MDC_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>My_MDC_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My MDC Account Created</label>
    <type>Checkbox</type>
</CustomField>