unpackaged/main/default/objects/Opportunity/fields/Official_College_Transcripts_Received__c.field-meta.xml
<CustomField>
    <fullName>Official_College_Transcripts_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by PeopleSoft integration</description>
    <label>Official College Transcripts Received</label>
    <type>Checkbox</type>
</CustomField>