unpackaged/main/default/objects/Opportunity/fields/Official_HS_Transcript_Received__c.field-meta.xml
<CustomField>
    <fullName>Official_HS_Transcript_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official HS Transcript Received</label>
    <type>Checkbox</type>
</CustomField>