unpackaged/main/default/objects/Opportunity/fields/Onboarding_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Cohort__c</fullName>
    <formula>traa_Applicant__r.Onboarding_Cohort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Cohort</label>
    <type>Text</type>
</CustomField>