unpackaged/main/default/objects/Opportunity/fields/Onboarding_Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Task_Completion__c</fullName>
    <formula>IF(   OR(
        ISPICKVAL( Student_Onboarding_Type__c , &quot;FTIC - Direct Entry&quot;),
        ISPICKVAL( Student_Onboarding_Type__c , &quot;FTIC - Traditional (under 25 not Direct Entry)&quot;),
        ISPICKVAL( Student_Onboarding_Type__c , &quot;FTIC Non-Traditional (25 and older)&quot;)
        ),
      (Core_Onboarding_Tasks__c +  Domestic_Onboarding_Tasks__c +  Domestic_Non_Transfer_Onboarding_Tasks__c)/9, 
  IF(   ISPICKVAL( Student_Onboarding_Type__c , &quot;Transfer&quot;),
     (Core_Onboarding_Tasks__c +  Domestic_Onboarding_Tasks__c)/8
     ,   
  IF(ISPICKVAL( Student_Onboarding_Type__c , &quot;INT.&quot;),
     Core_Onboarding_Tasks__c/6,
   0)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Task Completion</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>