unpackaged/main/default/objects/Opportunity/fields/PCA_Assignment_trigger__c.field-meta.xml
<CustomField>
    <fullName>PCA_Assignment_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in automation to trigger automatic assignment of PCAs</description>
    <label>PCA Assignment trigger</label>
    <type>Checkbox</type>
</CustomField>