unpackaged/main/default/objects/Opportunity/fields/Primary_PCA__c.field-meta.xml
<CustomField>
    <fullName>Primary_PCA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary PCA Advisor</description>
    <inlineHelpText>Primary PCA Advisor</inlineHelpText>
    <label>Primary PCA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesAA</relationshipName>
    <type>Lookup</type>
</CustomField>