unpackaged/main/default/objects/Opportunity/fields/Registered_for_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by Flow when Attendee record created/updated for Orientation event with Registered status</description>
    <label>Registered for Orientation</label>
    <type>Checkbox</type>
</CustomField>