unpackaged/main/default/objects/Opportunity/fields/Related_Term__c.field-meta.xml
<CustomField>
    <fullName>Related_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated through automation which will get Term record which is updated in Term field of Opportunity record and relate that term record in this field</description>
    <label>Related Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Related Opportunities</relationshipLabel>
    <relationshipName>TermOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>