unpackaged/main/default/objects/Opportunity/fields/Secondary_PCA__c.field-meta.xml
<CustomField>
    <fullName>Secondary_PCA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary PCA</description>
    <inlineHelpText>Secondary PCA</inlineHelpText>
    <label>Secondary PCA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesSA</relationshipName>
    <type>Lookup</type>
</CustomField>