unpackaged/main/default/objects/Opportunity/fields/Selected_for_Verification__c.field-meta.xml
<CustomField>
    <fullName>Selected_for_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected for Verification</label>
    <type>Checkbox</type>
</CustomField>