unpackaged/main/default/objects/Opportunity/fields/Student_Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Onboarding_Type__c</fullName>
    <label>Student Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTIC - Direct Entry</fullName>
                <label>Direct-Entry</label>
            </value>
            <value>
                <fullName>FTIC - Traditional (under 25 not Direct Entry)</fullName>
                <label>Traditional</label>
            </value>
            <value>
                <fullName>FTIC Non-Traditional (25 and older)</fullName>
                <label>Non-Traditional</label>
            </value>
            <value>
                <fullName>Non-FTIC</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>FTIC Non-Degree</fullName>
                <label>Non-Degree</label>
            </value>
            <value>
                <fullName>DUAL EN.</fullName>
                <label>Dual Enrollment</label>
            </value>
            <value>
                <fullName>INT.</fullName>
                <label>International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>