unpackaged/main/default/objects/Opportunity/fields/Student_Required_Information_Hold__c.field-meta.xml
<CustomField>
    <fullName>Student_Required_Information_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by PeopleSoft Integration</description>
    <label>Student Required Information Hold</label>
    <type>Checkbox</type>
</CustomField>