unpackaged/main/default/objects/Opportunity/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <description>Used for entry criteria in automation on PCA assignment</description>
    <formula>TExT(traa_Applicant__r.Student_Type__c)</formula>
    <label>Student Type</label>
    <type>Text</type>
</CustomField>