unpackaged/main/default/objects/Opportunity/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <length>4</length>
    <type>Text</type>
</CustomField>