unpackaged/main/default/objects/Opportunity/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <formula>Related_Term__r.hed__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>