unpackaged/main/default/objects/Opportunity/fields/Toggle__c.field-meta.xml
<CustomField>
    <fullName>Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Flows to bypass validation rules</description>
    <label>Toggle</label>
    <type>Checkbox</type>
</CustomField>