unpackaged/main/default/objects/Opportunity/fields/Total_Credits_Registered__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Registered__c</fullName>
    <description>Populated by PeopleSoft Integration</description>
    <label>Total Credits Registered</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>