unpackaged/main/default/objects/Opportunity/fields/traa_Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>traa_Academic_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the primary Academic Program during application.</description>
    <inlineHelpText>Lookup to the primary Academic Program during application.</inlineHelpText>
    <label>Academic Program</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Acad Program: Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>traa_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>