unpackaged/main/default/objects/Opportunity/fields/traa_Applicant__c.field-meta.xml
<CustomField>
    <fullName>traa_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the contact record of the applicant</description>
    <inlineHelpText>Lookup to the contact record of the applicant</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>traa_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>