unpackaged/main/default/objects/Opportunity/fields/traa_Applicant_is_an_Alumnus__c.field-meta.xml
<CustomField>
    <fullName>traa_Applicant_is_an_Alumnus__c</fullName>
    <description>Field to determine if the related Applicant is an alumni or not. Used for reporting purposes.</description>
    <formula>traa_Applicant__r.traa_Alumnus_Alumna__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If true, the applicant is an alumnus/alumna</inlineHelpText>
    <label>Applicant is an Alumnus</label>
    <type>Checkbox</type>
</CustomField>