unpackaged/main/default/objects/Opportunity/fields/traa_Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>traa_Decision_Notes__c</fullName>
    <description>Used to specify decisions if &quot;Declined Reason&quot; picklist is Other</description>
    <inlineHelpText>Used to specify decisions if &quot;Declined Reason&quot; picklist is Other</inlineHelpText>
    <label>Decision Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>