unpackaged/main/default/objects/Opportunity/fields/traa_Decision_Sent__c.field-meta.xml
<CustomField>
    <fullName>traa_Decision_Sent__c</fullName>
    <description>Date when decision sent?</description>
    <inlineHelpText>Date when decision sent?</inlineHelpText>
    <label>Decision Sent</label>
    <type>Date</type>
</CustomField>