unpackaged/main/default/objects/Opportunity/fields/traa_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>traa_Declined_Reason__c</fullName>
    <description>Reason applicant declined an offer</description>
    <inlineHelpText>Reason applicant declined an offer</inlineHelpText>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finances</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Competitor University</fullName>
            </value>
            <value>
                <fullName>Indecisive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>